Updating Junction cooldown  in interlockingimpl.java